# Clam

./: PLAN.md  README.md  gitignore  package.json  pnpm-lock.yaml
.continue/mcpServers/: new-mcp-server.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/app/: config.rs  mod.rs
src-tauri/src/file_handler/: basic.rs  mod.rs  traits.rs
src-tauri/src/llm/: mod.rs  openai.rs  traits.rs
src-tauri/src/model_manager/: local_fs.rs  mod.rs  traits.rs
src-tauri/src/transcriber/: mod.rs  traits.rs  whisper_sidecar.rs
src/hooks/: useLLM.ts  useSettings.ts  useTranscription.ts
src/utils/: transcriptionUtils.ts
